Home with working loader and random cover

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="./assets/bootstrap.min.css">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>
+    <div class="global-loader"></div>
+  </app-root>
 </body>
 </html>
