--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="./assets/bootstrap.min.css">
+  <link rel="stylesheet" href="./assets/icons/fontello/css/fontello.css">
 </head>
 <body>
   <app-root>
-    <div class="global-loader"></div>
+    <div class="loader-wrapper">
+      <div class="loader"></div>
+    </div>
   </app-root>
 </body>
 </html>
