--- a/src/assets/icons/fontello/demo.html
+++ b/src/assets/icons/fontello/demo.html
@@ -229,11 +229,11 @@ body {
 }
 @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?64471713');
-      src: url('./font/fontello.eot?64471713#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?64471713') format('woff'),
-           url('./font/fontello.ttf?64471713') format('truetype'),
-           url('./font/fontello.svg?64471713#fontello') format('svg');
+      src: url('./font/fontello.eot?72969262');
+      src: url('./font/fontello.eot?72969262#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?72969262') format('woff'),
+           url('./font/fontello.ttf?72969262') format('truetype'),
+           url('./font/fontello.svg?72969262#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -301,14 +301,18 @@ body {
     </div>
     <div id="icons" class="container">
       <div class="row">
+        <div title="Code: 0xe800" class="the-icons span3"><i class="demo-icon icon-minus">&#xe800;</i> <span class="i-name">icon-minus</span><span class="i-code">0xe800</span></div>
         <div title="Code: 0xe801" class="the-icons span3"><i class="demo-icon icon-basket">&#xe801;</i> <span class="i-name">icon-basket</span><span class="i-code">0xe801</span></div>
         <div title="Code: 0xe802" class="the-icons span3"><i class="demo-icon icon-user">&#xe802;</i> <span class="i-name">icon-user</span><span class="i-code">0xe802</span></div>
         <div title="Code: 0xe803" class="the-icons span3"><i class="demo-icon icon-basket-1">&#xe803;</i> <span class="i-name">icon-basket-1</span><span class="i-code">0xe803</span></div>
-        <div title="Code: 0xe804" class="the-icons span3"><i class="demo-icon icon-logout-1">&#xe804;</i> <span class="i-name">icon-logout-1</span><span class="i-code">0xe804</span></div>
       </div>
       <div class="row">
+        <div title="Code: 0xe804" class="the-icons span3"><i class="demo-icon icon-logout-1">&#xe804;</i> <span class="i-name">icon-logout-1</span><span class="i-code">0xe804</span></div>
         <div title="Code: 0xf0f6" class="the-icons span3"><i class="demo-icon icon-doc-text">&#xf0f6;</i> <span class="i-name">icon-doc-text</span><span class="i-code">0xf0f6</span></div>
+        <div title="Code: 0xf0fe" class="the-icons span3"><i class="demo-icon icon-plus-squared">&#xf0fe;</i> <span class="i-name">icon-plus-squared</span><span class="i-code">0xf0fe</span></div>
         <div title="Code: 0xf1c1" class="the-icons span3"><i class="demo-icon icon-file-pdf">&#xf1c1;</i> <span class="i-name">icon-file-pdf</span><span class="i-code">0xf1c1</span></div>
+      </div>
+      <div class="row">
         <div title="Code: 0xf1f8" class="the-icons span3"><i class="demo-icon icon-trash">&#xf1f8;</i> <span class="i-name">icon-trash</span><span class="i-code">0xf1f8</span></div>
         <div title="Code: 0xf2bb" class="the-icons span3"><i class="demo-icon icon-address-card">&#xf2bb;</i> <span class="i-name">icon-address-card</span><span class="i-code">0xf2bb</span></div>
       </div>
