--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
   <title>Welcome to Knowledge Bibliotheca</title>
   <base href="/">
+  <meta name="theme-color" content="#22355C">
+  <link rel="icon" sizes="192x192" href="favicon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="./assets/bootstrap.min.css">
