--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Welcome to Knowledge Bibliotheca</title>
+  <title>Bibliotheca</title>
   <base href="/">
   <meta name="theme-color" content="#22355C">
   <link rel="icon" sizes="192x192" href="favicon.png">
